@@ -69,7 +69,6 @@ option "lease"       - "Lease time to allocate to clients" int default="600" no
 # EAPOL parameters
 option "eapolenable" - "Enable IEEE 802.1x authentication" flag   off
 
-
 # UAM parameters
 option "uamserver"    - "URL of authentication web server" string no
 option "uamhomepage"  - "URL of homepage to redirect unauthenticated users to" string no
@@ -117,3 +116,4 @@ option "wpaguests"     - "Allow WPA 'Guest' access" flag off
 option "papalwaysok"   - "Always allow 'PAP' (password) style authentication (not advised)" flag off
 option "chillixml"     - "Use ChilliSpot XML in WISPr blocks" flag   off
 
+option "usetap"        - "Use a TAP instead of TUN (linux only)" flag   off
